--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MessageBroker": {
+    "Host": "amqp://movieadvisor-queue:5672",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
