add message broker and mail settings

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "Username": "guest",
+    "Password": "guest"
+  },
+  "MailSettings": {
+    "DisplayName": "Movie Advisor",
+    "From": "no-reply@movieadvisor.com",
+    "UserName": "info@movieadvisor.com",
+    "Password": "password123",
+    "Host": "smtp.movieadvisor.com",
+    "Port": 587,
+    "UseSSL": true,
+    "UseStartTls": false
+  }
 }
