add redis to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,14 @@ services:
     depends_on:
       - rabbitmq
     environment:
+      # Message Broker
       - MessageBroker__Host=rabbitmq://rabbitmq
       - MessageBroker__Username=guest
       - MessageBroker__Password=guest
+
+      # Redis
+      - RedisSettings__Host=redis
+      - RedisSettings__Port=6379
     networks:
       - my-network
 
@@ -22,6 +27,14 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+    networks:
+      - my-network
+
+  redis:
+    image: redis:alpine
+    container_name: redis-container
+    ports:
+      - "6379:6379"
     networks:
       - my-network
 
