--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -20,5 +20,9 @@
     "Port": 587,
     "UseSSL": true,
     "UseStartTls": false
+  },
+  "RedisSettings": {
+    "Host": "localhost",
+    "Port": "6379"
   }
 }
