feat: add hangfire job scheduler abstractions, implementations, and movie feeder job from themoviedb api

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Hangfire": "Data Source=127.0.0.1,1433;Initial Catalog=HangfireDB;User Id=sa;Password=S@mplePa55.;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -24,5 +27,9 @@
   "RedisSettings": {
     "Host": "localhost",
     "Port": "6379"
+  },
+  "TheMovieDbSettings": {
+    "APIKey_v3": "use",
+    "APIReadToken_v4": "urs:)"
   }
 }
