--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ./logs:/app/logs
     depends_on:
       - rabbitmq
+      - redis
+      - hangfire-db
     environment:
       # Message Broker
       - MessageBroker__Host=rabbitmq://rabbitmq
@@ -18,6 +20,9 @@ services:
       # Redis
       - RedisSettings__Host=redis
       - RedisSettings__Port=6379
+
+      # Hangfire
+      - ConnectionStrings__Hangfire="Data Source=127.0.0.1,1433;Initial Catalog=HangfireDB;User Id=sa;Password=S@mplePa55.;MultipleActiveResultSets=true;"
     networks:
       - my-network
 
@@ -35,6 +40,27 @@ services:
     container_name: redis-container
     ports:
       - "6379:6379"
+    networks:
+      - my-network
+
+  # hangfire:
+  #   image: hangfire/hangfire
+  #   ports:
+  #     - "5000:80"
+  #   depends_on:
+  #     - hangfire-db
+  #   networks:
+  #     - my-network
+  #   restart: always
+
+  hangfire-db:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: hangfire-db-container
+    environment:
+      SA_PASSWORD: "S@mplePa55."
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1433:1433"
     networks:
       - my-network
 
