feat: add jwt singin operations

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -31,5 +31,8 @@
   "TheMovieDbSettings": {
     "APIKey_v3": "use",
     "APIReadToken_v4": "urs:)"
+  },
+  "JwtSettings": {
+    "Secret": "Super hard to guess.."
   }
 }
