--- a/web/react/vite-movie-advisor-ts/package.json
+++ b/web/react/vite-movie-advisor-ts/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "mobx": "^6.9.0",
+    "mobx-persist-store": "^1.1.3",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.11.0",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
